# AOIN-OS

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GITHUB.md  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml
services/brain-api/: Dockerfile  pyproject.toml
services/brain-api/src/aion_brain/: __init__.py  config.py  logging.py  main.py
services/brain-api/src/aion_brain/action_authorization/: __init__.py  audit.py  blockers.py  decisions.py  evaluator.py  policy.py  query.py  redaction.py
services/brain-api/tests/: action_proposal_fakes.py  audit_integrity_fakes.py  autonomy_fakes.py  backup_fakes.py  belief_helpers.py  conftest.py  contract_registry_helpers.py  decision_helpers.py  dialogue_helpers.py  entity_helpers.py  extension_helpers.py  grounding_helpers.py  kernel_fakes.py  knowledge_claim_graph_evaluation_test_helpers.py  knowledge_intelligence_test_helpers.py  knowledge_research_test_helpers.py  knowledge_source_registry_implementation_helpers.py  knowledge_source_registry_test_helpers.py  learning_synthesis_helpers.py  lifecycle_helpers.py  model_gateway_fakes.py  model_outputs_fakes.py  model_provider_hardening_helpers.py  module_activation_helpers.py  module_binding_helpers.py  module_developer_fakes.py  module_mock_helpers.py  notification_fakes.py  operator_action_fakes.py  operator_fakes.py  outcome_helpers.py  performance_fakes.py  prompt_helpers.py  release_package_fakes.py  resilience_fakes.py  resource_registry_helpers.py  run_supervision_fakes.py  runtime_config_fakes.py  sandbox_fakes.py  scheduler_fakes.py  (+1302 more)
(+3448 files in other folders)
