[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aion-brain-api"
version = "0.1.0"
description = "AION Brain API scaffold"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0,<2.0.0",
  "cryptography>=49.0.0,<50.0.0",
  "fastapi>=0.111.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "langgraph>=1.2.0,<2.0.0",
  "nats-py>=2.9.0,<3.0.0",
  "pgvector>=0.4.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.0.0,<6.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.5.0,<1.0.0",
]
turbovec = [
  "turbovec",
]
graphiti = [
  "graphiti-core",
]
mcp = [
  "mcp",
]
temporal = [
  "temporalio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aion_brain"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "turbovec_integration: optional real TurboVec integration tests",
  "graphiti_integration: optional real Graphiti integration tests",
  "mcp_integration: optional real MCP integration tests",
  "temporal_integration: optional real Temporal integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["aion_brain"]
